--- a/Pages/InputFormsDemo.html
+++ b/Pages/InputFormsDemo.html
@@ -19,9 +19,10 @@
         <error-output class="text-error" for="text"></error-output>
     </div>
     <div>
-        <label for="pwd">password input type:</label>
-        <input type="password" id="pwd" name="pwd" required>
-    </div>
+      <label for="pwd">password input type:</label>
+      <input type="password" id="pwd" name="pwd" required>
+      <error-output class="pwd-error" for="text"></error-output>
+  </div>
     <div>
       <label for="email">email input type: </label>
       <input type="email" id="email" name="email" required>
